fix: correct positioning of call to sign up container on mobile devices

--- a/src/app/auth/auth.component.scss
+++ b/src/app/auth/auth.component.scss
@@ -50,30 +50,17 @@ section {
 
   > a {
     @include primaryButton($p: 12px 16px);
-    font-family: Inter;
     font-weight: 700;
-    font-style: normal;
     font-size: 16px;
-    line-height: 120%;
-    letter-spacing: 0%;
   }
 
   &.mobile-call-to-sign-up {
     @include dFlex($ai: center, $g: 16px);
-    position: absolute;
-    bottom: 80px;
-    left: 50%;
-    transform: translateX(-50%);
     white-space: nowrap;
     width: max-content;
 
     > span {
-      font-family: Inter;
-      font-weight: 400;
-      font-style: normal;
       font-size: 20px;
-      line-height: 120%;
-      letter-spacing: 0%;
       white-space: nowrap;
     }
   }
@@ -112,34 +99,14 @@ section {
     padding: 16px;
   }
 
-  // .auth-content {
-  //   padding: 24px;
-  // }
-
   .call-to-sign-up.mobile-call-to-sign-up {
-    bottom: 60px;
-    width: auto;
-    max-width: calc(100vw - 32px);
-
     > span {
-      font-family: Inter;
-      font-weight: 400;
-      font-style: normal;
       font-size: 20px;
-      line-height: 120%;
-      letter-spacing: 0%;
-      flex-shrink: 0;
     }
 
     > a {
       padding: 10px 16px;
-      font-family: Inter;
-      font-weight: 700;
-      font-style: normal;
       font-size: 16px;
-      line-height: 120%;
-      letter-spacing: 0%;
-      flex-shrink: 0;
     }
   }
 }
